--- a/src/app/feature/components/footer/footer.component.css
+++ b/src/app/feature/components/footer/footer.component.css
@@ -2,7 +2,7 @@
     background-color: #0F385A;
     width: 100%;
     height: 70px;
-    position: fixed;
+    position: fixed relative;
     bottom: 0;
     z-index: 1;
 }
@@ -30,6 +30,7 @@
 .full-height {
     height: 100%;
 }
-.responsive-text{
+
+.responsive-text {
     font-size: 2vh;
 }
