--- a/src/app/feature/components/header/header.component.css
+++ b/src/app/feature/components/header/header.component.css
@@ -1,11 +1,12 @@
-header{
+header {
     background-color: #0F385A;
     width: 100%;
     height: 70px;
-    position: fixed;
+    position: fixed absolute;
     top: 0;
     z-index: 1;
 }
+
 .bg-blue {
     background-color: #0F385A;
 }
