--- a/src/app/feature/components/objects/components/create-object/create-object.component.html
+++ b/src/app/feature/components/objects/components/create-object/create-object.component.html
@@ -1,111 +1,101 @@
 <section id="create-object" class="container">
-  <div>
-    <label class="title text-center mt-3">{{ title }}</label>
-  </div>
-  <div class="center-div">
-    <div class="card p-4 mt-5 form-container">
-      <div>
-        <label class="form-title text-center mb-3 responsive-text"
-          >Información del objeto</label
-        >
-      </div>
-      <form name=" myForm" [formGroup]="object" (ngSubmit)="onSubmit()">
-        <div class="login-container">
-          <div class="row">
-            <div class="col-md-6 mb-2">
-              <div class="form-group">
-                <label class="responsive-text">Nombre</label>
-                <input
-                  type="text"
-                  name="email"
-                  ng-model="user.username"
-                  required
-                  class="form-control"
-                  formControlName="name"
-                />
-              </div>
-            </div>
-            <div class="col-md-6 mb-3">
-              <div class="form-group">
-                <label class="responsive-text">Descripción</label>
-                <input
-                  type="text"
-                  name="pass"
-                  required
-                  class="form-control"
-                  formControlName="description"
-                />
-              </div>
-            </div>
-            <hr class="hr hr-blurry" />
-            <div class="col-md-6 mb-3">
-              <div class="form-group">
-                <label class="responsive-text">Característica</label>
-                <select
-                  class="form-select responsive-text"
-                  aria-label="Default select example"
-                >
-                  <option selected>Open this select menu</option>
-                  <option value="1">Color</option>
-                  <option value="2">Forma</option>
-                </select>
-              </div>
-            </div>
-            <div class="col-md-6 mb-3">
-              <div class="form-group">
-                <label class="responsive-text">Descripción</label>
-                <input
-                  type="text"
-                  name="pass"
-                  ng-model="user.password"
-                  required
-                  class="form-control"
-                />
-              </div>
-            </div>
-
-            <hr class="hr hr-blurry" />
-            <div class="col-md-6 mb-3">
-              <div class="form-group">
-                <label class="responsive-text">Característica</label>
-                <select
-                  class="form-select responsive-text"
-                  aria-label="Default select example"
-                >
-                  <option selected>Open this select menu</option>
-                  <option value="1">Color</option>
-                  <option value="2">Forma</option>
-                  ¿
-                </select>
-              </div>
-            </div>
-            <div class="col-md-6 mb-3">
-              <div class="form-group">
-                <label class="responsive-text">Descripción</label>
-                <input
-                  type="text"
-                  name="pass"
-                  ng-model="user.password"
-                  required
-                  class="form-control"
-                />
-              </div>
-            </div>
-
-            <div class="col-md-12">
-              <div class="form-group text-center">
-                <button
-                  ng-click="authenticate()"
-                  ng-disabled="myForm.$invalid"
-                  class="btn bg-blue pull-right responsive-text"
-                >
-                  Crear
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </form>
+    <div>
+        <label class="title text-center">{{ title }}</label>
     </div>
-  </div>
+    <div class="center-div">
+        <div class="card p-4 mt-5 form-container">
+            <div>
+                <label class="form-title text-center mb-3 responsive-text">Información del objeto</label>
+            </div>
+            <form name=" myForm" [formGroup]="object" (ngSubmit)="onSubmit()">
+                <div class="login-container">
+                    <div class="row">
+                        <div class="col-md-6 mb-2">
+                            <div class="form-group">
+                                <label class="responsive-text">Nombre</label>
+                                <input type="text" name="email" ng-model="user.username" required class="form-control"
+                                    formControlName="name" />
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label class="responsive-text">Descripción</label>
+                                <input type="text" name="pass" required class="form-control"
+                                    formControlName="description" />
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label class="responsive-text">Estado</label>
+                                <select class="form-select responsive-text" aria-label="Default select example"
+                                    formControlName="status">
+                                    <option selected disabled>Selecciona una opción</option>
+                                    <option value={{status}} *ngFor="let status of statuses">{{ status }}</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label class="responsive-text">Tipo de objeto</label>
+                                <select class="form-select responsive-text" aria-label="Default select example"
+                                    formControlName="type">
+                                    <option selected disabled>Selecciona una opción</option>
+                                    <option value={{objectType}} *ngFor="let objectType of objectTypes">{{ objectType }}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <hr class="hr hr-blurry" />
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label class="responsive-text">Característica</label>
+                                <select class="form-select responsive-text" aria-label="Default select example">
+                                    <option selected disabled>Open this select menu</option>
+                                    <option value="1">Color</option>
+                                    <option value="2">Forma</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label class="responsive-text">Descripción</label>
+                                <input type="text" name="pass" ng-model="user.password" required class="form-control" />
+                            </div>
+                        </div>
+
+
+                        <hr class="hr hr-blurry" />
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label class="responsive-text">Característica</label>
+                                <select class="form-select responsive-text" aria-label="Default select example">
+                                    <option selected>Open this select menu</option>
+                                    <option value="1">Color</option>
+                                    <option value="2">Forma</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label class="responsive-text">Descripción</label>
+                                <input type="text" name="pass" ng-model="user.password" required class="form-control" />
+                            </div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <div class="form-group text-center">
+                                <button ng-click="authenticate()" ng-disabled="myForm.$invalid"
+                                    class="btn bg-blue pull-right responsive-text">
+                                    {{ title }}
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </section>
