--- a/src/app/feature/components/objects/components/list/list.component.css
+++ b/src/app/feature/components/objects/components/list/list.component.css
@@ -1,5 +1,5 @@
 .card {
-    width: 18rem;
+    width: auto;
     height: 100%;
     cursor: pointer;
 }
@@ -30,40 +30,45 @@ ul {
     justify-content: center;
 }
 
-.responsive-text{
+.responsive-text {
     font-size: 0.97vw;
 }
 
-.claimed{
+.claimed {
     position: absolute;
     margin: auto;
     bottom: 63%;
+    transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
     font-size: 2.5vw;
     color: #00eaff;
 }
 
-.card-img-top{
+.card-img-top {
     filter: brightness(60%);
     background-color: #000000;
 }
 
-.hiden{
+.hiden {
     visibility: hidden;
     height: 0;
 }
-.btn-edit{
+
+.btn-edit {
     background-color: #1FB2DE;
     color: #FFFFFF;
 }
-.btn-edit:hover{
+
+.btn-edit:hover {
     background-color: #188db1;
     color: #FFFFFF;
 }
-.btn-delete{
+
+.btn-delete {
     background-color: #EC0677;
     color: #FFFFFF;
 }
-.btn-delete:hover{
-    background-color: #bd005b; 
+
+.btn-delete:hover {
+    background-color: #bd005b;
 }
