--- a/src/app/feature/components/header/header.component.css
+++ b/src/app/feature/components/header/header.component.css
@@ -1,4 +1,4 @@
-header {
+.header {
     background-color: #0F385A;
     width: 100%;
     height: 70px;
@@ -11,6 +11,10 @@ header {
     background-color: #0F385A;
 }
 
-img {
+.logo {
     height: 40px;
+}
+
+.user-img {
+    background-color: rgba(237, 237, 237, 0.74);
 }
