Se agregan los features de los objetos

--- a/src/app/feature/components/objects/components/create-object/create-object.component.css
+++ b/src/app/feature/components/objects/components/create-object/create-object.component.css
@@ -26,6 +26,23 @@
     font-weight: bold;
     letter-spacing: 1px;
 }
-.responsive-text{
+
+.responsive-text {
     font-size: 1vw;
+}
+
+.btn-rounded {
+    border-radius: 50%;
+}
+
+.bg-blue:hover {
+    background-color: #124772;
+}
+
+.validation-empty {
+    width: 100%;
+    font-size: 1.5vw;
+    color: #0F385A;
+    font-weight: bolder;
+    text-align: center;
 }
