Se agregan los toasts a la aplicación

--- a/src/app/feature/components/objects/components/list/list.component.html
+++ b/src/app/feature/components/objects/components/list/list.component.html
@@ -28,7 +28,7 @@
                   </button>
                 </div>
                 <div class="col-6 p-2 center">
-                  <button class="btn btn-delete btn-size responsive-text" (click)="onDelete(object.id)" *ngIf="logged">
+                  <button class="btn btn-delete btn-size responsive-text" (click)="onDelete(object)" *ngIf="logged">
                     Eliminar
                   </button>
                 </div>
