--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <section id="app">
+    <app-toaster></app-toaster>
     <app-header></app-header>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
