Feature: se agrega mi perfil y editar mi perfil

--- a/src/app/feature/components/header/header.component.html
+++ b/src/app/feature/components/header/header.component.html
@@ -20,7 +20,7 @@
                             class="rounded-circle user-img">
                     </a>
                     <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-                        <li><a class="dropdown-item" href="#">Mi Perfil</a></li>
+                        <li><a class="dropdown-item" [routerLink]="['/users/myuser']">Mi Perfil</a></li>
                         <li><a class="dropdown-item" href="#">Cambiar Contraseña</a></li>
                         <li>
                             <hr class="dropdown-divider">
