--- a/src/app/feature/components/landing/landing.component.css
+++ b/src/app/feature/components/landing/landing.component.css
@@ -2,13 +2,17 @@
     height: 86vh;
     background-image: url('/assets/img/poligran-campus.png');
     background-size: cover;
+    position: relative;
 }
 
 .landing-message {
-    margin: auto;
-    margin-top: 25vh;
-    width: 75%;
     padding: 10px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: auto;
 }
 
 .landing-text{
