--- a/src/app/feature/components/footer/footer.component.html
+++ b/src/app/feature/components/footer/footer.component.html
@@ -1,12 +1,11 @@
-<section class="p-2 footer-bs" id="footer">
-  <div class="row">
-    <div class="col-3"></div>
-    <div class="col-6">
+<section class="px-3 py-3 footer-bs" id="footer">
+  <div class="d-flex flex-column-reverse">
+    <div>
       <div class="derechos">
         <span class="responsive-text">© Todos los derechos reservados</span>
       </div>
     </div>
-    <div class="col-3 full-height">
+    <div class="full-height">
       <div class="icons-footer">
         <a href="https://es-la.facebook.com/poligran/" target="_blank">
           <i class="fa-brands fa-facebook fa-2x"></i>
