--- a/src/app/feature/components/header/header.component.css
+++ b/src/app/feature/components/header/header.component.css
@@ -1,7 +1,6 @@
 header {
     background-color: #0F385A;
     width: 100%;
-    height: 70px;
     position: fixed absolute;
     top: 0;
     z-index: 1;
@@ -14,3 +13,9 @@ header {
 img {
     height: 40px;
 }
+@media (max-width: 576px){
+    .prueba{
+        flex-direction: column!important;
+    }
+}
+
