--- a/src/app/feature/components/objects/components/list/list.component.html
+++ b/src/app/feature/components/objects/components/list/list.component.html
@@ -4,16 +4,21 @@
       <label class="title text-center responsive-text">OBJETOS</label>
     </div>
     <div class="row">
-      <div class="col-3 col-md-3 col-sm-12">
+      <div class="col-sm-12 col-md-12 col-lg">
         <app-filter (searchFilters)="searchFilters($event)"></app-filter>
       </div>
       <div class="col-lg-9 col-sm-12">
         <ul class="row">
           <li class="col-4 mb-4" *ngFor="let object of objects">
             <div class="card">
-              <img src="../../../../../../assets/img/descarga.jpg"
-                [ngClass]="object.status == 'RECLAMADO' ? 'card-img-top' : ''" alt="..." />
-              <h1 [ngClass]="object.status == 'RECLAMADO' ? 'claimed' : 'hiden'">
+              <img
+                src="../../../../../../assets/img/descarga.jpg"
+                [ngClass]="object.status == 'RECLAMADO' ? 'card-img-top' : ''"
+                alt="..."
+              />
+              <h1
+                [ngClass]="object.status == 'RECLAMADO' ? 'claimed' : 'hiden'"
+              >
                 RECLAMADO
               </h1>
               <div class="card-body">
@@ -22,12 +27,18 @@
               </div>
               <div class="buttons row mb-2">
                 <div class="col-6 p-2 center">
-                  <button class="btn btn-edit btn-size responsive-text" [routerLink]="['edit', object.id]">
+                  <button
+                    class="btn btn-edit btn-size responsive-text"
+                    [routerLink]="['edit', object.id]"
+                  >
                     Editar
                   </button>
                 </div>
                 <div class="col-6 p-2 center">
-                  <button class="btn btn-delete btn-size responsive-text" (click)="onDelete(object.id)">
+                  <button
+                    class="btn btn-delete btn-size responsive-text"
+                    (click)="onDelete(object.id)"
+                  >
                     Eliminar
                   </button>
                 </div>
