--- a/src/app/feature/components/session/login/login.component.html
+++ b/src/app/feature/components/session/login/login.component.html
@@ -1,6 +1,6 @@
 <section id="login">
   <div class="container center-div">
-    <div class="login-form p-5">
+    <div class="login-form p-2 p-md-5">
       <div>
         <label class="title text-center responsive-text">INICIAR SESIÓN</label>
       </div>
@@ -32,7 +32,9 @@
               </div>
             </div>
             <div class="col-md-12 mb-3">
-              <a [routerLink]="['/session/forgotpassword']">¿Has olvidado contraseña?</a>
+              <a [routerLink]="['/session/forgotpassword']"
+                >¿Has olvidado contraseña?</a
+              >
             </div>
             <div class="col-md-12 mb-3" *ngIf="!logged">
               <div class="invalid-feedbback responsive-text">
