--- a/src/app/feature/components/landing/landing.component.css
+++ b/src/app/feature/components/landing/landing.component.css
@@ -16,8 +16,15 @@
 }
 
 .landing-text{
-    font-size: 3vw;
+    font-size: 1rem;
     color: white;
     text-align: center;
     font-weight: bolder;
+}
+
+@media (min-width: 768px) {
+    .landing-text{
+        font-size: 1.5rem;
+    }
+
 }
