landing, crear objetos, login y filtro de objetos ya están responsivos, falta añadir responsive a los objetos registrados y al listado de usuarios

--- a/src/app/feature/components/landing/landing.component.html
+++ b/src/app/feature/components/landing/landing.component.html
@@ -1,6 +1,5 @@
 <section id="ladingpage">
-  <div class="mt-2 landing-image">
-    <label class="title text-center">LANDING PAGE</label>
+  <div class="landing-image">
     <div class="landing-background">
       <div class="landing-message">
         <p class="landing-text">
