--- a/src/app/feature/components/objects/components/list/list.component.html
+++ b/src/app/feature/components/objects/components/list/list.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="col-lg-9 col-sm-12">
         <ul class="row">
-          <li class="col-4 mb-4" *ngFor="let object of objects">
+          <li class="col-sm-6 col-lg-4 mb-4" *ngFor="let object of objects">
             <div class="card">
               <img
                 src="../../../../../../assets/img/descarga.jpg"
