--- a/src/app/feature/components/header/header.component.html
+++ b/src/app/feature/components/header/header.component.html
@@ -27,7 +27,7 @@
     <div class="text-end">
       <button
         type="button"
-        class="btn btn-outline-light me-2"
+        class="btn btn-outline-light"
         [routerLink]="['/session']"
       >
         Login
