--- a/src/app/feature/components/session/resetpassword/resetpassword.component.html
+++ b/src/app/feature/components/session/resetpassword/resetpassword.component.html
@@ -2,7 +2,7 @@
     <div class="container center-div">
         <div class="login-form p-5">
             <div>
-                <label class="title text-center">RECUPERAR CONTRASEÑA</label>
+                <label class="title text-center">ACTUALIZAR CONTRASEÑA</label>
             </div>
             <form name="form" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
                 <div class="login-container">
