--- a/src/app/feature/components/footer/footer.component.css
+++ b/src/app/feature/components/footer/footer.component.css
@@ -2,7 +2,7 @@
     background-color: #0F385A;
     width: 100%;
     height: 70px;
-    position: fixed relative;
+    position: absolute fixed;
     bottom: 0;
     z-index: 1;
 }
