--- a/src/app/feature/components/objects/components/create-object/create-object.component.html
+++ b/src/app/feature/components/objects/components/create-object/create-object.component.html
@@ -48,6 +48,54 @@
                         </div>
 
                         <hr class="hr hr-blurry" />
+                        <div *ngIf="object.value.status == 'RECLAMADO'" class="row">
+                            <div>
+                                <label class="form-title text-center mb-3 responsive-text">Información de quién
+                                    reclamó</label>
+                            </div>
+                            <div class="col-md-6 mb-2">
+                                <div class="form-group">
+                                    <label class="responsive-text">Nombre</label>
+                                    <input type="text" name="email" ng-model="user.username" required
+                                        class="form-control" />
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <div class="form-group">
+                                    <label class="responsive-text">Contacto</label>
+                                    <input type="text" name="pass" required class="form-control" />
+                                </div>
+                            </div>
+
+                            <div class="col-md-6 mb-3">
+                                <div class="form-group">
+                                    <label class="responsive-text">Identificación</label>
+                                    <select class="form-select" aria-label="Default select example">
+                                        <option selected disabled>Selecciona una opción</option>
+                                        <option value={{status}} *ngFor="let status of statuses">{{ status }}</option>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6 mb-3">
+                                <div class="form-group">
+                                    <label class="responsive-text">Tipo de persona</label>
+                                    <select class="form-select" aria-label="Default select example">
+                                        <option selected disabled>Selecciona una opción</option>
+                                        <option>Estudiante</option>
+                                        <option>Profesor</option>
+                                        <option>Directivo</option>
+                                        <option>Externo</option>
+                                        <option>Otro</option>
+                                        <!--<option value={{objectType}} *ngFor="let objectType of objectTypes">{{
+                                            objectType }}
+                                        </option>-->
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+
+                        <hr class="hr hr-blurry" />
                         <div>
                             <label class="form-title text-center mb-3 responsive-text">Características</label>
                         </div>
