--- a/src/app/feature/components/header/header.component.css
+++ b/src/app/feature/components/header/header.component.css
@@ -14,6 +14,12 @@
     height: 40px;
 }
 
+@media (max-width: 576px){
+    .prueba{
+        flex-direction: column!important;
+    }
+}
+
 .user-img {
     background-color: rgba(237, 237, 237, 0.74);
 }
