--- a/src/app/feature/components/landing/landing.component.html
+++ b/src/app/feature/components/landing/landing.component.html
@@ -1,14 +1,12 @@
 <section id="ladingpage">
   <div class="landing-image">
-    <div class="row">
-      <div class="col-12" class="landing-background">
-        <div class="landing-message">
-          <p class="landing-text">
-            Bienvenido al sistema de objetos perdidos del politécnico
-            GranColombiano, aquí podrás buscar los objetos que se hayan perdido
-            dentro de la institución, recuerda que todos somos poli.
-          </p>
-        </div>
+    <div class="landing-background">
+      <div class="landing-message">
+        <p class="landing-text">
+          Bienvenido al sistema de objetos perdidos del politécnico
+          GranColombiano, aquí podrás buscar los objetos que se hayan perdido
+          dentro de la institución, recuerda que todos somos poli.
+        </p>
       </div>
     </div>
   </div>
