--- a/src/app/feature/components/objects/components/create-object/create-object.component.css
+++ b/src/app/feature/components/objects/components/create-object/create-object.component.css
@@ -27,8 +27,8 @@
     letter-spacing: 1px;
 }
 
-.responsive-text {
-    font-size: 1vw;
+.responsive-text{
+    font-size: 1rem;
 }
 
 .btn-rounded {
@@ -41,7 +41,7 @@
 
 .validation-empty {
     width: 100%;
-    font-size: 1.5vw;
+    font-size: 1rem;
     color: #0F385A;
     font-weight: bolder;
     text-align: center;
