--- a/src/app/feature/components/objects/components/create-object/create-object.component.html
+++ b/src/app/feature/components/objects/components/create-object/create-object.component.html
@@ -48,7 +48,7 @@
                         </div>
 
                         <hr class="hr hr-blurry" />
-                        <div *ngIf="object.value.status == 'RECLAMADO'" class="row">
+                        <div *ngIf="object.value.status == 'RECLAMADO'" class="row" formGroupName="claimer">
                             <div>
                                 <label class="form-title text-center mb-3 responsive-text">Información de quién
                                     reclamó</label>
@@ -57,39 +57,51 @@
                                 <div class="form-group">
                                     <label class="responsive-text">Nombre</label>
                                     <input type="text" name="email" ng-model="user.username" required
-                                        class="form-control" />
+                                        class="form-control" formControlName="name" />
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-2">
+                                <div class="form-group">
+                                    <label class="responsive-text">Apellido</label>
+                                    <input type="text" name="email" ng-model="user.username" required
+                                        class="form-control" formControlName="lastName" />
                                 </div>
                             </div>
                             <div class="col-md-6 mb-3">
+                                <div class="form-group">
+                                    <label class="responsive-text">Tipo de Documento</label>
+                                    <select class="form-select" aria-label="Default select example"
+                                        formControlName="documentType">
+                                        <option selected disabled>Seleccione una opción</option>
+                                        <option value="{{documentType}}" *ngFor="let documentType of documentTypes">{{
+                                            documentType
+                                            }}</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-2">
+                                <div class="form-group">
+                                    <label class="responsive-text">Documento</label>
+                                    <input type="text" name="email" ng-model="user.username" required
+                                        class="form-control" formControlName="document" />
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-2">
                                 <div class="form-group">
                                     <label class="responsive-text">Contacto</label>
-                                    <input type="text" name="pass" required class="form-control" />
-                                </div>
-                            </div>
-
-                            <div class="col-md-6 mb-3">
-                                <div class="form-group">
-                                    <label class="responsive-text">Identificación</label>
-                                    <select class="form-select" aria-label="Default select example">
-                                        <option selected disabled>Selecciona una opción</option>
-                                        <option value={{status}} *ngFor="let status of statuses">{{ status }}</option>
-                                    </select>
+                                    <input type="text" name="email" ng-model="user.username" required
+                                        class="form-control" formControlName="contact" />
                                 </div>
                             </div>
 
                             <div class="col-md-6 mb-3">
                                 <div class="form-group">
                                     <label class="responsive-text">Tipo de persona</label>
-                                    <select class="form-select" aria-label="Default select example">
-                                        <option selected disabled>Selecciona una opción</option>
-                                        <option>Estudiante</option>
-                                        <option>Profesor</option>
-                                        <option>Directivo</option>
-                                        <option>Externo</option>
-                                        <option>Otro</option>
-                                        <!--<option value={{objectType}} *ngFor="let objectType of objectTypes">{{
-                                            objectType }}
-                                        </option>-->
+                                    <select class="form-select" aria-label="Default select example"
+                                        formControlName="userType">
+                                        <option selected disabled>Seleccione una opción</option>
+                                        <option value="{{userType}}" *ngFor="let userType of userTypes">{{ userType
+                                            }}</option>
                                     </select>
                                 </div>
                             </div>
